--- a/chelsea.html
+++ b/chelsea.html
@@ -251,4 +251,162 @@
                         </div>
                     </div>
                     <div class="category-item">
-                       
+                 <div class="row no-gutters">
+                            <div class="icon-side text-center">
+                                <div class="category-icon epl">
+                                </div>
+                            </div>
+                            <div class="content-side">
+                                <h2 class="h3 upper">EPL LEAGUE CUP BETTING</h2>
+                                <p>Ready for the EPL games? Arsenal, Manchester United, Chelsea, Liverpool, pick your favourite team and earn money today.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category-item">
+                        <div class="row no-gutters">
+                            <div class="icon-side text-center">
+                                <div class="category-icon esports">
+                                </div>
+                            </div>
+                            <div class="content-side">
+                                <h2 class="h3 upper">ESPORTS BETTING</h2>
+                                <p>Esports betting is the latest uprising gambling type that is similar to sports betting. Win more with our unbelievably low margin odds now.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category-item">
+                        <div class="row no-gutters">
+                            <div class="icon-side text-center">
+                                <div class="category-icon other">
+                                </div>
+                            </div>
+                            <div class="content-side">
+                                <h2 class="h3 upper">OTHER ONLINE BETTING</h2>
+                                <p>Looking for more games? Be sure to try the <a href="https://t.co/sXB60thgcC#Live-Casino" target="_blank">Live Online Casino</a>, it has live broadcast that gives the best gaming experience, play <a href="https://t.co/IDKvAGiX3A#Online-Slots" target="_blank">Online Slots</a>, or pick a lucky number from <a href="https://t.co/75WkUKonsZ#4D-Lottery" target="_blank">Online 4d lottery betting</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-grey game-wrapper">
+            <div class="container">
+                <h3 class="h2 upper">Sport Games</h3>
+                <div class="row no-gutters game-list justify-content-center">
+                    <div class="col-xl-3 col-lg-4 col-md-6">
+                        <a href="./login.html" class="game-link">
+                            <div class="game-card">
+                                <h3 class="h2 game-name">iBIT SPORT</h3>
+                                <div class="desc">
+                                    The company is renowned for bringing together multiple popular sports events and offers thousands of games each month.
+                                </div>
+                                <div class="game-logo">
+                                    <img src="resource/img/games/saba.png" alt="iBIT SPORT">
+                                </div>
+                                <div class="hover-play">
+                                    <span>PLAY</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-4 col-md-6">
+                        <a href="./login.html" class="game-link">
+                            <div class="game-card">
+                                <h3 class="h2 game-name">IMSB</h3>
+                                <div class="desc">
+                                    Professional actuaries and analyst teams that bring reasonable odds to the platform.
+                                </div>
+                                <div class="game-logo">
+                                    <img src="resource/img/games/insports.png" alt="IMSB">
+                                </div>
+                                <div class="hover-play">
+                                    <span>PLAY</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--div w3-include-html="./footer.html"></div-->
+        <div><footer>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4 mb-4 mb-lg-0">
+                <h3 class="upper">About Us</h3>
+                <div class="footer-content">
+                  <p>As an international leading online game company, we have world-class game information experts, helpful and experienced customer service teams, professional marketing and state-of-the-art technical team to ensure that our customers can enjoy playing in a safe environment.</p>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-4 mb-lg-0">
+                <h3 class="upper">Bank Payments</h3>
+                <div class="footer-content">
+                  <ul class="list-inline bank-list">
+                    <li class="list-inline-item"><img src="resource/img/bank-maybank.jpg" alt="May Bank"></li>
+                    <li class="list-inline-item"><img src="resource/img/bank-public.jpg" alt="Public Bank"></li>
+                    <li class="list-inline-item"><img src="resource/img/bank-cimb-1.jpg" alt="CIMB Bank"></li>
+                    <li class="list-inline-item"><img src="resource/img/bank-hongleong.jpg" alt="Hong Long Bank"></li>
+                    <li class="list-inline-item"><img src="resource/img/bank-rhb.jpg" alt="RHB Bank"></li>
+                    <li class="list-inline-item"><img src="resource/img/bank-ambank.jpg" alt="AM Bank"></li>
+                    <li class="list-inline-item"><img src="resource/img/bank-bsn.jpg" alt="BSN Bank"></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-4 site-map">
+                <div class="row">
+                  <div class="col-6">
+                    <h4 class="upper">Information</h4>
+
+                    <ul class="list-unstyled">
+                      <li><a target="_blank" rel="nofollow" href="/intl/iBET/vip/en-us/index.html?syscode=A">VIP Policy</a></li>
+                      <li><a target="_blank" rel="nofollow" href="info/about.html">About Us</a></li>
+                      <li><a target="_blank" rel="nofollow" href="info/termsCondition.html">Terms &amp; Conditions</a></li>
+                      <li><a target="_blank" rel="nofollow" href="info/privacy.html">Privacy Policy</a></li>
+
+                    </ul>
+                  </div>
+                  <div class="col-6">
+                    <h4 class="upper">User Guide</h4>
+
+                    <ul class="list-unstyled">
+                      <li><a target="_blank" href="https://ibet6888.com/en-blog/">Help Center</a></li>
+                      <li><a target="_blank" rel="nofollow" href="info/index.html">Deposit Guideline</a></li>
+                      <li><a target="_blank" rel="nofollow" href="info/withdrawal.html">Withdrawal Help</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="sub-footer">
+              <div class="row">
+                <div class="col-lg-8">
+                  <img src="resource/img/logo-pagcor.png" alt="PAGCOR"> <span>License Number 16-0031, and regulated by the Philippine Amusement and Gaming Corporation.</span>
+                </div>
+                <div class="col text-lg-right">
+                  Copyright © 2019 iBET. All Rights Reserved.
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
+      <!--footer end-->
+
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous" type="2b7ae1b1b8c1458d1e3e8f94-text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" type="2b7ae1b1b8c1458d1e3e8f94-text/javascript"></script>
+    <script src="resource/js/load-html.js" type="2b7ae1b1b8c1458d1e3e8f94-text/javascript"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" type="2b7ae1b1b8c1458d1e3e8f94-text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sidr/2.2.1/jquery.sidr.min.js" integrity="sha256-/VeucihXSoNSfLiRfsWg/5RKp4eTTuW4Wnl28lm3rjE=" crossorigin="anonymous" type="2b7ae1b1b8c1458d1e3e8f94-text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha256-DHF4zGyjT7GOMPBwpeehwoey18z8uiz98G4PRu2lV0A=" crossorigin="anonymous" type="2b7ae1b1b8c1458d1e3e8f94-text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.2/jquery.matchHeight-min.js" integrity="sha256-+oeQRyZyY2StGafEsvKyDuEGNzJWAbWqiO2L/ctxF6c=" crossorigin="anonymous" type="2b7ae1b1b8c1458d1e3e8f94-text/javascript"></script>
+    <script src="resource/js/script.js" type="2b7ae1b1b8c1458d1e3e8f94-text/javascript"></script>
+    <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/95c75768/cloudflare-static/rocket-loader.min.js" data-cf-settings="2b7ae1b1b8c1458d1e3e8f94-|49" defer=""></script>
+</body>
+
+</html>
+      
